--- a/htmls/articlelist.html
+++ b/htmls/articlelist.html
@@ -20,31 +20,41 @@
 
  <!-- Sign up -->
  <header id="articleHeader">
-   <div class="col-md-6 col-centered clearfix">
+   <div class="col-md-6 col-sm-10  col-centered clearfix">
      <h1 id="logo" class="pull-left"><a href="#"><img class="logo-head" alt="logo" src="img/logo_icon_nobg.svg" height="50" width="50" /></a></h1>
      <aside class="pull-right">
-       <div class="frame"><img alt="avtar" src="img/avtar.jpg" /></div> Jason
-     </aside> 
-   </div>
- </header>
- <section id="articlesRows">
-  <div class="col-md-6 col-centered">
+      <div class="dropdown" id="dropdownMenuTop">
+       <div class="dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><div class="frame"><img alt="avtar" src="img/avtar.jpg" /></div> Jason</div>
+       <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+       <li><a href="#">Admin</a></li>
+       <li role="separator" class="divider"></li>
+        <li><a href="#">Settings</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#">Log Out</a></li>
+        
+      </ul>
+    </div>
+  </aside> 
+</div>
+</header>
+<section id="articlesRows">
+  <div class="col-md-6 col-sm-10 col-centered">
     <div class="articleRow">
       <h3>July 15th, 2015</h3>
       <ul type="1" class="articlelist">
         <li class="read">
           <div class="row">
-            <div class="col-md-10">1. jhgjgj</div> <div class="col-md-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">1. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
         <li>
           <div class="row">
-            <div class="col-md-10">2. jhgjgj</div> <div class="col-md-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">2. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
         <li class="read">
           <div class="row">
-            <div class="col-md-10">3. jhgjgj</div> <div class="col-md-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">3. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
       </ul>
@@ -54,17 +64,17 @@
       <ul type="1" class="articlelist">
         <li class="read">
           <div class="row">
-            <div class="col-md-10">1. jhgjgj</div> <div class="col-md-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">1. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
         <li class="read">
           <div class="row">
-            <div class="col-md-10">2. jhgjgj</div> <div class="col-md-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">2. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
         <li class="read">
           <div class="row">
-            <div class="col-md-10">3. jhgjgj</div> <div class="col-md-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">3. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
       </ul>
