Article reading page with enable readings and translation switch

--- a/htmls/articlelist.html
+++ b/htmls/articlelist.html
@@ -44,17 +44,17 @@
       <ul type="1" class="articlelist">
         <li class="read">
           <div class="row">
-            <div class="col-md-10 col-sm-10 col-xs-10">1. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">1. 餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
         <li>
           <div class="row">
-            <div class="col-md-10 col-sm-10 col-xs-10">2. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">2. 餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
         <li class="read">
           <div class="row">
-            <div class="col-md-10 col-sm-10 col-xs-10">3. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">3. 餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
       </ul>
@@ -64,25 +64,25 @@
       <ul type="1" class="articlelist">
         <li class="read">
           <div class="row">
-            <div class="col-md-10 col-sm-10 col-xs-10">1. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">1. 餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
         <li class="read">
           <div class="row">
-            <div class="col-md-10 col-sm-10 col-xs-10">2. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">2. 餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
         <li class="read">
           <div class="row">
-            <div class="col-md-10 col-sm-10 col-xs-10">3. jhgjgj</div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
+            <div class="col-md-10 col-sm-10 col-xs-10">3. 餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </div> <div class="col-md-2 col-sm-2 col-xs-2"><div class="checkmark"><i class="fa fa-check"></i></div></div>
           </div>
         </li>
       </ul>
     </div>
   </div>
 </section>
-<footer>
-  <p id="sendfeedbackLink" class="text-center"><a href="#">Send Feedback</a></p>
+<footer>  
+  <p id="sendfeedbackLink" class="text-center"><a href="#">Send Feedback</a></p> 
 </footer>
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
