Article Read Page - word meaning box added

--- a/htmls/articleread.html
+++ b/htmls/articleread.html
@@ -27,68 +27,94 @@
       <div class="dropdown" id="dropdownMenuTop">
        <div class="dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><div class="frame" lang="en"><img alt="avtar" src="img/avtar.jpg" /></div> Jason</div>
        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-       <li lang="en"><a href="#">Admin</a></li>
-       <li role="separator" class="divider"></li>
-        <li lang="en"><a href="#">Settings</a></li>
-        <li role="separator" class="divider"></li>
-        <li lang="en"><a href="#">Log Out</a></li>
-        
-      </ul>
-    </div>
-  </aside> 
-</div>
+         <li lang="en"><a href="#">Admin</a></li>
+         <li role="separator" class="divider"></li>
+         <li lang="en"><a href="#">Settings</a></li>
+         <li role="separator" class="divider"></li>
+         <li lang="en"><a href="#">Log Out</a></li>
+
+       </ul>
+     </div>
+   </aside> 
+ </div>
 </header>
 <section id="articleDetails" class="clearfix">
-<div class="col-md-6 col-centered">
-  <header id="articleInfo" class="clearfix">
-  <span lang="en" class="pull-left source">Source: <a href="#">NHK Easy News</a></span>
-  <span lang="en" class="pull-right">Level: <a href="#">JLPT N5</a></span>
-  </header>
-  <article id="articleBody">
-    <h2 id="articleHeading" lang="ja">餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </h2>
-     <p lang="ja"><span class="wordDef">づ蛣䦌姨驚</span> 騌詃ちゃ䤣姥 坣きゅ妦フェみ 楟秚 焧䶥骤, 䧎饎榚せ择 ぴゃびゅクァ駪ゑ 姨驚 ゑギェめ, 䏤.䦧イィ隊 じゃ苯润襞碜 は訤りゅハ勤 キョ囥馺 キ坣 ん珣府 ギェめに韥簯 檣餚蝥ニえ 騌詃ちゃ䤣姥 ぴゅ囨, ばちゅら竤䪩 檣餚蝥ニえ 婩䰩奚頨そ</p>
-      <p lang="ja">餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 蟦㤣や鏥馩 キョ囥馺襊ほ 愥榥 じゃ苯润 窨ジョ ヴュちにゃだ稧 䧺䣊娩ラ襟 楦奤睢ぢゅ䏨, カ騌詃 あぷ 䏤.䦧イィ隊 祟誣にゅろ䧜 ざ埥びゃ ぴゃびゅ あぷ楣榩ミ ホ䣵妥ぼぶ ゾ氨楟秚覧 びしょ 訤りゅハ 䏦䰧娪壎饵 な て愥榥㶣 ばちゅら竤䪩 䩚㠯ゔ鄥揦 ざ埥びゃ びしょ, ら竤䪩 ん珣府㛥諤 づ蛣䦌姨驚 で㨣, 諤䏤 びゅクァ駪 鄢ず廥けと ひぴゅ囨氩シャ 坣きゅ妦フェみ
+  <div class="col-md-6 col-centered">
+    <header id="articleInfo" class="clearfix">
+      <span lang="en" class="pull-left source">Source: <a href="#">NHK Easy News</a></span>
+      <span lang="en" class="pull-right">Level: <a href="#">JLPT N5</a></span>
+    </header>
+    <article id="articleBody">
+      <h2 id="articleHeading" lang="ja">餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </h2>
+      <div class="articleContent">
+      <p lang="ja"><span class="wordDef">づ蛣䦌姨驚</span> 騌詃ちゃ䤣姥 坣きゅ妦フェみ 楟秚 焧䶥骤, 䧎饎榚せ择 ぴゃびゅクァ駪ゑ 姨驚 ゑギェめ, 䏤.䦧イィ隊 じゃ苯润襞碜 は訤りゅハ勤 キョ囥馺 キ坣 ん珣府 ギェめに韥簯 檣餚蝥ニえ 騌詃ちゃ䤣姥 ぴゅ囨, ばちゅら竤䪩 檣餚蝥ニえ 婩䰩奚頨そ</p>
+      <p lang="ja">餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 蟦㤣や鏥馩 キョ囥馺襊ほ 愥榥 じゃ苯润 窨ジョ ヴュちにゃだ稧 䧺䣊娩ラ襟 楦奤睢ぢゅ䏨, カ騌詃 あぷ 䏤.䦧イィ隊 <span class="wordDef">祟誣にゅろ䧜</span> ざ埥びゃ ぴゃびゅ あぷ楣榩ミ ホ䣵妥ぼぶ ゾ氨楟秚覧 びしょ 訤りゅハ 䏦䰧娪壎饵 な て愥榥㶣 ばちゅら竤䪩 䩚㠯ゔ鄥揦 ざ埥びゃ びしょ, ら竤䪩 ん珣府㛥諤 づ蛣䦌姨驚 で㨣, 諤䏤 びゅクァ駪 鄢ず廥けと ひぴゅ囨氩シャ 坣きゅ妦フェみ
 
-</p> 
-      <p lang="ja">きゅ妦フェ むい あぷ楣榩ミ 䧦駜ぎゅフョにょ べ婧礯ー禤, 襊ほア げさで㨣䥺 蟦㤣や鏥馩 楦奤睢ぢゅ䏨 ジ埨 窨ジョく 娪壎 谨駧しゃかキ ゾ氨楟秚覧, 愥榥 ん珣府㛥諤 䏤.䦧イィ隊 ひぴゅ囨氩シャ みゾ氨 祟誣にゅろ䧜 婩䰩奚頨そ な て愥榥㶣 ㄨ雦 揦げさ, 栤儦こ キ坣 堥骧解稣ㄨ 蟦㤣や鏥馩 婩䰩奚頨そ 竤䪩 榚せ择 䧦駜ぎゅフョにょ べ婧礯ー禤 雦狦檧びしょ 詎簨䝧ぢ盤 祟誣にゅろ䧜 げさで㨣䥺 愥榥 ミばちゅ, く姚驦焩禌 ばちゅら竤䪩 諤䏤 な  て愥</p>
-  </article>
-  <div class="actionpanel">
-    <button lang="en" class="btn btn-default">Mark As Read</button> <span lang="en">Mark as Read when done so we can show you your progress</span>
-  </div>
-</div>
-</section>
-<footer id="articleReadFooter">
-<div class="col-md-6 col-sm-10 col-centered">
-  <div class="col-md-8">
-  <label class="actionLabel">Enable Translation</label> 
-  <div class="switch">
-  <input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round" type="checkbox">
-  <label for="cmn-toggle-1"></label>
-</div>
-<label class="actionLabel">Enable Readings</label> 
-<div class="switch">
-  <input id="cmn-toggle-2" class="cmn-toggle cmn-toggle-round" type="checkbox">
-  <label for="cmn-toggle-2"></label>
-</div>
-  </div>
-  <div class="col-md-4 text-right">
-  <p id="sendfeedbackLink" class="text-center"><a href="#">Send Feedback</a></p>
-  </div>
-  </div>
-</footer>
-<script src="js/jquery-2.1.4.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/waypoints.min.js"></script>
-<script src="js/waypoints-sticky.min.js"></script>
-<script src="js/retina.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/jquery-lang.min.js"></script>
-<script>
-  var lang = new Lang('en');
-  lang.dynamic('fr', 'js/langpack/fr.json');
-  lang.dynamic('de', 'js/langpack/de.json');
-</script>
-<script src="js/main.js"></script>
-<script src="js/gmap.js"></script>
+      </p> 
+      <p lang="ja"><span class="wordDef">きゅ妦フェ</span> むい あぷ楣榩ミ 䧦駜ぎゅフョにょ べ婧礯ー禤, 襊ほア げさで㨣䥺 蟦㤣や鏥馩 楦奤睢ぢゅ䏨 ジ埨 窨ジョく 娪壎 谨駧しゃかキ ゾ氨楟秚覧, 愥榥 ん珣府㛥諤 䏤.䦧イィ隊 ひぴゅ囨氩シャ みゾ氨 祟誣にゅろ䧜 婩䰩奚頨そ な て愥榥㶣 ㄨ雦 揦げさ, 栤儦こ キ坣 堥骧解稣ㄨ 蟦㤣や鏥馩 婩䰩奚頨そ 竤䪩 榚せ择 䧦駜ぎゅフョにょ べ婧礯ー禤 雦狦檧びしょ 詎簨䝧ぢ盤 祟誣にゅろ䧜 げさで㨣䥺 愥榥 ミばちゅ, く姚驦焩禌 ばちゅら竤䪩 諤䏤 な  て愥</p>
+      </div>
+      <div class="hide" id="definationBox">
+        <h3 class="word clearfix"><span class="pull-left">づ蛣䦌姨驚</span> <span class="closebtn pull-right">Close</span></h3>
+        <p><span class="label">Defintion</span> <span>Convenience Store</span></p>
+        <p><span class="label">Reading</span> <span>none</span></p>
+        <p><span class="label">Type</span> <span>Vocabulary</span></p>
+        <p><span class="label">General Note</span> <span>Convenience stores sell anything from daily goods to foods and drinks. They are a central part of Japanese life. Most open 24/7.</span class="label"></p>
+        <p><span class="label">Specific Note</span> <span>none</span></p>
+        </div>
+      </article>
+      <div class="actionpanel">
+
+        <button lang="en" class="btn btn-default">Mark As Read</button> <span lang="en">Mark as Read when done so we can show you your progress</span>
+      </div>
+    </div>
+  </section>
+  <footer id="articleReadFooter">
+    <div class="col-md-6 col-sm-10 col-centered">
+      <div class="col-md-8">
+        <label class="actionLabel">Enable Translation</label> 
+        <div class="switch">
+          <input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round" type="checkbox">
+          <label for="cmn-toggle-1"></label>
+        </div>
+        <label class="actionLabel">Enable Readings</label> 
+        <div class="switch">
+          <input id="cmn-toggle-2" class="cmn-toggle cmn-toggle-round" type="checkbox">
+          <label for="cmn-toggle-2"></label>
+        </div>
+      </div>
+      <div class="col-md-4 text-right">
+        <p id="sendfeedbackLink" class="text-center"><a href="#">Send Feedback</a></p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/waypoints.min.js"></script>
+  <script src="js/waypoints-sticky.min.js"></script>
+  <script src="js/retina.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/jquery-lang.min.js"></script>
+  <script>
+    var lang = new Lang('en');
+    lang.dynamic('fr', 'js/langpack/fr.json');
+    lang.dynamic('de', 'js/langpack/de.json');
+  </script>
+  <script src="js/main.js"></script>
+  <script src="js/gmap.js"></script>
+  <script type="text/javascript">
+    $(function(){
+      $(".wordDef").click(function(){
+          $(this).css("color","#f37875");
+          var topPos = $(this).outerHeight(true) + $(this).position().top + 10;
+          $("#definationBox").css("top",topPos+"px");
+          $("#definationBox").removeClass("hide");
+      });
+      $(".closebtn").click(function(){
+          $("#definationBox").addClass("hide");
+          $(".wordDef").removeAttr("style");
+      });
+    });
+  </script>
 </body>
 </html>
