Feedback and Feedback thank you page HTML

--- a/htmls/articleread.html
+++ b/htmls/articleread.html
@@ -47,7 +47,7 @@
     <article id="articleBody">
       <h2 id="articleHeading" lang="ja">餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </h2>
       <div class="articleContent">
-      <p lang="ja"><span class="wordDef">づ蛣䦌姨驚</span> 騌詃ちゃ䤣姥 坣きゅ妦フェみ 楟秚 焧䶥骤, 䧎饎榚せ择 ぴゃびゅクァ駪ゑ 姨驚 ゑギェめ, 䏤.䦧イィ隊 じゃ苯润襞碜 は訤りゅハ勤 キョ囥馺 キ坣 ん珣府 ギェめに韥簯 檣餚蝥ニえ 騌詃ちゃ䤣姥 ぴゅ囨, ばちゅら竤䪩 檣餚蝥ニえ 婩䰩奚頨そ</p>
+      <p lang="ja"><span class="wordDef">づ蛣䦌姨驚</span> 騌詃ちゃ䤣姥 坣きゅ妦フェみ 楟秚 焧䶥骤, 䧎饎榚せ择 ぴゃびゅクァ駪ゑ 姨驚 <span class="synonyms"><span>Text</span>ゑギェめ</span>, 䏤.䦧イィ隊 じゃ苯润襞碜 は訤りゅハ勤 キョ囥馺 キ坣 ん珣府 ギェめに韥簯 檣餚蝥ニえ 騌詃ちゃ䤣姥 ぴゅ囨, ばちゅら竤䪩 檣餚蝥ニえ 婩䰩奚頨そ</p>
       <p lang="ja">餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 蟦㤣や鏥馩 キョ囥馺襊ほ 愥榥 じゃ苯润 窨ジョ ヴュちにゃだ稧 䧺䣊娩ラ襟 楦奤睢ぢゅ䏨, カ騌詃 あぷ 䏤.䦧イィ隊 <span class="wordDef">祟誣にゅろ䧜</span> ざ埥びゃ ぴゃびゅ あぷ楣榩ミ ホ䣵妥ぼぶ ゾ氨楟秚覧 びしょ 訤りゅハ 䏦䰧娪壎饵 な て愥榥㶣 ばちゅら竤䪩 䩚㠯ゔ鄥揦 ざ埥びゃ びしょ, ら竤䪩 ん珣府㛥諤 づ蛣䦌姨驚 で㨣, 諤䏤 びゅクァ駪 鄢ず廥けと ひぴゅ囨氩シャ 坣きゅ妦フェみ
 
       </p> 
