Added Loader on SubmitButton

--- a/htmls/create_article_step3.html
+++ b/htmls/create_article_step3.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-  <!-- Create Article -->
+ <!-- Create Article -->
  <header id="articleHeader">
    <div class="col-md-6 col-sm-10  col-centered clearfix">
      <h1 id="logo" class="pull-left"><a href="#"><img class="logo-head" alt="logo" src="img/logo_icon_nobg.svg" height="50" width="50" /></a></h1>
@@ -40,51 +40,67 @@
 </header>
 <section id="articleDetails" class="clearfix">
   <div class="col-md-6 col-centered">
+  <div id="steps" class="col-centered clearfix">
+          <div class="circleTop">
+            <div class="circle">1</div>
+            <span>Text</span>
+          </div>
+          <div class="line"></div>
+          <div class="circleTop">
+            <div class="circle">2</div>
+            <span>Annotation</span>
+          </div>
+          <div class="line"></div>
+          <div class="circleTop">
+            <div class="circle active">3</div>
+            <span>Translation</span>
+          </div>
+          <div class="line"></div>
+          <div class="circleTop">
+            <div class="circle">4</div>
+            <span>Review</span>
+          </div>
+        </div>
     <header id="articleInfo" class="clearfix">
       <span lang="en" class="pull-left source">Source: <a href="#">NHK Easy News</a></span>
       <span lang="en" class="pull-right">Level: <a href="#">JLPT N5</a></span>
     </header>
-    <article id="articleBody">
+    <article id="articleBody" class="translation">
+    <div id="translationPage">
       <h2 id="articleHeading" lang="ja">餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 </h2>
+   
+      <div class="form-group">
+      <input type="text" class="form-control translatedText" value="Japanese Convenience Store Open in the Middle East for the First Time" placeholder="Enter Translation" />
+      </div>
       <div class="articleContent">
-      <p lang="ja"><span class="wordDef">づ蛣䦌姨驚</span> 騌詃ちゃ䤣姥 坣きゅ妦フェみ 楟秚 焧䶥骤, 䧎饎榚せ择 ぴゃびゅクァ駪ゑ 姨驚 <span class="synonyms"><span>Text</span>ゑギェめ</span>, 䏤.䦧イィ隊 じゃ苯润襞碜 は訤りゅハ勤 キョ囥馺 キ坣 ん珣府 ギェめに韥簯 檣餚蝥ニえ 騌詃ちゃ䤣姥 ぴゅ囨, ばちゅら竤䪩 檣餚蝥ニえ 婩䰩奚頨そ</p>
+      <p lang="ja">づ蛣䦌姨驚 騌詃ちゃ䤣姥 坣きゅ妦フェみ 楟秚 焧䶥骤, 䧎饎榚せ择 ぴゃびゅクァ駪ゑ 姨驚 ゑギェめ, 䏤.䦧イィ隊 じゃ苯润襞碜 は訤りゅハ勤 キョ囥馺 キ坣 ん珣府 ギェめに韥簯 檣餚蝥ニえ 騌詃ちゃ䤣姥 ぴゅ囨, ばちゅら竤䪩 檣餚蝥ニえ 婩䰩奚頨そ</p>
+      <div class="form-group">
+      <textarea class="form-control translatedText" placeholder="Enter Translation"></textarea>
+      </div>
       <p lang="ja">餩拥グェ禞の 趣きょる狧シ ゑギェ 勣しッ みゾ氨 蟦㤣や鏥馩 キョ囥馺襊ほ 愥榥 じゃ苯润 窨ジョ ヴュちにゃだ稧 䧺䣊娩ラ襟 楦奤睢ぢゅ䏨, カ騌詃 あぷ 䏤.䦧イィ隊 <span class="wordDef">祟誣にゅろ䧜</span> ざ埥びゃ ぴゃびゅ あぷ楣榩ミ ホ䣵妥ぼぶ ゾ氨楟秚覧 びしょ 訤りゅハ 䏦䰧娪壎饵 な て愥榥㶣 ばちゅら竤䪩 䩚㠯ゔ鄥揦 ざ埥びゃ びしょ, ら竤䪩 ん珣府㛥諤 づ蛣䦌姨驚 で㨣, 諤䏤 びゅクァ駪 鄢ず廥けと ひぴゅ囨氩シャ 坣きゅ妦フェみ
 
       </p> 
+      <div class="form-group">
+      <textarea class="form-control translatedText" placeholder="Enter Translation"></textarea>
+      </div>
       <p lang="ja"><span class="wordDef">きゅ妦フェ</span> むい あぷ楣榩ミ 䧦駜ぎゅフョにょ べ婧礯ー禤, 襊ほア げさで㨣䥺 蟦㤣や鏥馩 楦奤睢ぢゅ䏨 ジ埨 窨ジョく 娪壎 谨駧しゃかキ ゾ氨楟秚覧, 愥榥 ん珣府㛥諤 䏤.䦧イィ隊 ひぴゅ囨氩シャ みゾ氨 祟誣にゅろ䧜 婩䰩奚頨そ な て愥榥㶣 ㄨ雦 揦げさ, 栤儦こ キ坣 堥骧解稣ㄨ 蟦㤣や鏥馩 婩䰩奚頨そ 竤䪩 榚せ择 䧦駜ぎゅフョにょ べ婧礯ー禤 雦狦檧びしょ 詎簨䝧ぢ盤 祟誣にゅろ䧜 げさで㨣䥺 愥榥 ミばちゅ, く姚驦焩禌 ばちゅら竤䪩 諤䏤 な  て愥</p>
+      <div class="form-group">
+      <textarea class="form-control translatedText" placeholder="Enter Translation"></textarea>
       </div>
-      <div class="hide" id="definationBox">
-        <h3 class="word clearfix"><span class="pull-left">づ蛣䦌姨驚</span> <span class="closebtn pull-right">Close</span></h3>
-        <p><span class="label">Defintion</span> <span>Convenience Store</span></p>
-        <p><span class="label">Reading</span> <span>none</span></p>
-        <p><span class="label">Type</span> <span>Vocabulary</span></p>
-        <p><span class="label">General Note</span> <span>Convenience stores sell anything from daily goods to foods and drinks. They are a central part of Japanese life. Most open 24/7.</span class="label"></p>
-        <p><span class="label">Specific Note</span> <span>none</span></p>
-        </div>
+      </div>
+      </div>
       </article>
-      <div class="actionpanel">
-
-        <button lang="en" class="btn btn-default">Mark As Read</button> <span lang="en">Mark as Read when done so we can show you your progress</span>
-      </div>
+     
     </div>
   </section>
   <footer id="articleReadFooter">
-    <div class="col-md-6 col-sm-10 col-centered">
-      <div class="col-md-8">
-        <label class="actionLabel">Enable Translation</label> 
-        <div class="switch">
-          <input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round" type="checkbox">
-          <label for="cmn-toggle-1"></label>
-        </div>
-        <label class="actionLabel">Enable Readings</label> 
-        <div class="switch">
-          <input id="cmn-toggle-2" class="cmn-toggle cmn-toggle-round" type="checkbox">
-          <label for="cmn-toggle-2"></label>
-        </div>
-      </div>
-      <div class="col-md-4 text-right">
-        <p id="sendfeedbackLink" class="text-center"><a href="#">Send Feedback</a></p>
-      </div>
+    <div class="col-md-6 col-sm-10 col-centered clearfix">
+      <div class="clearfix">
+              <div class="form-group clearfix">
+               <button class="btn btn-primary stepButton pull-left" type="submit">&lt;&lt; Previous</button>
+               <button class="btn btn-primary stepButton pull-right" type="submit">Next &gt;&gt;</button>
+             </div>
+           </div>
     </div>
   </footer>
 
